// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders inactive prefix 1`] = `
<View
  style={
    Object {
      "height": 24,
      "justifyContent": "center",
      "opacity": 0,
      "paddingRight": 8,
      "top": 2,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "left",
        "textAlignVertical": "top",
      }
    }
  >
    a
  </Text>
</View>
`;

exports[`renders inactive suffix 1`] = `
<View
  style={
    Object {
      "height": 24,
      "justifyContent": "center",
      "opacity": 0,
      "paddingLeft": 8,
      "top": 2,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "right",
        "textAlignVertical": "top",
      }
    }
  >
    z
  </Text>
</View>
`;

exports[`renders prefix 1`] = `
<View
  style={
    Object {
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingRight": 8,
      "top": 2,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "left",
        "textAlignVertical": "top",
      }
    }
  >
    a
  </Text>
</View>
`;

exports[`renders suffix 1`] = `
<View
  style={
    Object {
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingLeft": 8,
      "top": 2,
    }
  }
>
  <Text
    style={
      Object {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "right",
        "textAlignVertical": "top",
      }
    }
  >
    z
  </Text>
</View>
`;
